--- a/nano/static/css/nano/sass/_shared.scss
+++ b/nano/static/css/nano/sass/_shared.scss
@@ -21,6 +21,10 @@
   border-width: 1px 1px 0;
   margin: 0 auto;
   padding: 9px 10px;
+
+  font-weight: bold;
+  color: #666;
+
 }
 
 @mixin panel-body() {
