--- a/nano/static/css/nano/stylesheets/screen.css
+++ b/nano/static/css/nano/stylesheets/screen.css
@@ -153,16 +153,17 @@ h1 {
   text-align: center;
 }
 
-/* line 106, ../sass/_shared.scss */
+/* line 109, ../sass/_shared.scss */
 .data-list-wrapper {
   margin: 10px;
 }
-/* line 109, ../sass/_shared.scss */
+/* line 112, ../sass/_shared.scss */
 .data-list-wrapper .col {
   display: table-cell;
+  text-align: left;
 }
 
-/* line 115, ../sass/_shared.scss */
+/* line 118, ../sass/_shared.scss */
 .data-list-header {
   -moz-border-bottom-colors: none;
   -moz-border-left-colors: none;
@@ -183,25 +184,26 @@ h1 {
   font-size: 12px;
 }
 
-/* line 120, ../sass/_shared.scss */
+/* line 123, ../sass/_shared.scss */
 .data-list {
   -webkit-box-sizing: border-box;
   -moz-box-sizing: border-box;
   box-sizing: border-box;
   border: 1px solid #aaaaaa;
 }
-/* line 125, ../sass/_shared.scss */
+/* line 128, ../sass/_shared.scss */
 .data-list .row {
   background-color: #fff;
   border-bottom: 1px solid #ececec;
   padding: 8px;
   font-size: 12px;
+  cursor: pointer;
 }
-/* line 132, ../sass/_shared.scss */
+/* line 136, ../sass/_shared.scss */
 .data-list .row:hover {
   background-color: #ececec;
 }
-/* line 136, ../sass/_shared.scss */
+/* line 140, ../sass/_shared.scss */
 .data-list .row:last-child {
   border-bottom: none;
 }
@@ -570,10 +572,353 @@ ul.flashes {
 
 /* line 3, ../sass/_invoice.scss */
 .invoice-data-list .col {
-  width: 200px;
+  width: 160px;
 }
 
-/* line 18, ../sass/screen.scss */
+/* line 1, ../sass/_default_invoice_theme.scss */
+#invoice h1 {
+  margin: 0;
+  color: #555;
+  font-size: 24px;
+  text-transform: uppercase;
+}
+
+/* line 2, ../sass/_default_invoice_theme.scss */
+#invoice h2, #Main #invoice h3 {
+  color: #000;
+  text-transform: none;
+}
+
+/* line 3, ../sass/_default_invoice_theme.scss */
+#invoice h2 {
+  margin: 10px 0;
+  font-size: 14pt;
+}
+
+/* line 4, ../sass/_default_invoice_theme.scss */
+#invoice-amount td, th {
+  font-size: 10pt;
+}
+
+/* line 5, ../sass/_default_invoice_theme.scss */
+#invoice-header #company-address {
+  text-align: right;
+  font-size: 11pt;
+  line-height: 14pt;
+}
+
+/* line 6, ../sass/_default_invoice_theme.scss */
+#invoice #client-details, #invoice-info p {
+  font-size: 10pt;
+  line-height: 14pt;
+}
+
+/* line 7, ../sass/_default_invoice_theme.scss */
+#invoice #invoice-other, #invoice #payment-details {
+  font-size: 10pt;
+  line-height: 14pt;
+}
+
+/* line 8, ../sass/_default_invoice_theme.scss */
+#invoice-info h2, #invoice-info h3 {
+  margin: 0;
+  font-weight: normal;
+}
+
+/* line 9, ../sass/_default_invoice_theme.scss */
+#invoice #invoice-info h2 {
+  text-transform: uppercase;
+  font-size: 18pt;
+}
+
+/* line 10, ../sass/_default_invoice_theme.scss */
+#invoice #invoice-info h3 {
+  font-size: 12pt;
+}
+
+/* line 11, ../sass/_default_invoice_theme.scss */
+#invoice #invoice-info p {
+  text-align: right;
+  margin-top: 0;
+}
+
+/* line 12, ../sass/_default_invoice_theme.scss */
+#invoice-info #payment-total {
+  display: none;
+}
+
+/* line 13, ../sass/_default_invoice_theme.scss */
+#comments {
+  font-weight: bold;
+  margin-top: 0;
+  font-size: 10pt;
+}
+
+/* line 14, ../sass/_default_invoice_theme.scss */
+#invoice #invoice-info h2, #invoice #company-address div.email, #invoice #invoice-other h2, #invoice #payment-details h2 {
+  color: #a10000;
+}
+
+/* line 15, ../sass/_default_invoice_theme.scss */
+#invoice #invoice-other h2, #invoice #payment-details h2 {
+  font-weight: normal;
+  text-transform: uppercase;
+}
+
+/*=========================== LAYOUT =========================*/
+/* line 19, ../sass/_default_invoice_theme.scss */
+#invoice {
+  padding: 0 1cm 1cm 1cm;
+  background: #ececec top left repeat-y;
+  border: 1px solid #ccc;
+}
+
+/* line 20, ../sass/_default_invoice_theme.scss */
+#invoice-header .logo {
+  float: left;
+}
+
+/* line 21, ../sass/_default_invoice_theme.scss */
+#invoice-header {
+  margin-top: 1.5cm;
+  border-bottom: 1px solid #a10000;
+  padding-bottom: 10px;
+  overflow: hidden;
+}
+
+/* line 22, ../sass/_default_invoice_theme.scss */
+* html #invoice-header {
+  height: 1%;
+}
+
+/* line 23, ../sass/_default_invoice_theme.scss */
+#invoice-blank-header {
+  margin-top: 1.6cm;
+}
+
+/* line 24, ../sass/_default_invoice_theme.scss */
+#invoice-info {
+  margin: 0.7cm 0 20px 0;
+  width: 55%;
+  float: right;
+  text-align: right;
+}
+
+/* line 25, ../sass/_default_invoice_theme.scss */
+#invoice-info #payment-terms {
+  display: none;
+}
+
+/* line 26, ../sass/_default_invoice_theme.scss */
+#invoice-info #payment-due {
+  font-style: italic;
+}
+
+/* line 27, ../sass/_default_invoice_theme.scss */
+#company-address {
+  margin: 0;
+  padding: 0;
+  width: 300px;
+  float: right;
+}
+
+/* line 28, ../sass/_default_invoice_theme.scss */
+#client-details {
+  margin: 0.7cm 0 20px 0cm;
+  float: left;
+  width: 35%;
+}
+
+/* Positioned to appear in a standard envelope window when printed */
+/* line 29, ../sass/_default_invoice_theme.scss */
+#invoice-other {
+  text-align: right;
+  clear: both;
+  float: right;
+  width: 50%;
+  margin-top: 0;
+}
+
+/* line 30, ../sass/_default_invoice_theme.scss */
+#invoice #payment-details {
+  float: left;
+  width: 45%;
+  margin-top: 0;
+}
+
+/* line 31, ../sass/_default_invoice_theme.scss */
+#payment-details .sort-code, #payment-details .account-number, #payment-details .payment-reference {
+  clear: left;
+}
+
+/* line 32, ../sass/_default_invoice_theme.scss */
+#payment-details strong {
+  font-weight: normal;
+  float: left;
+  width: 12em;
+}
+
+/* line 33, ../sass/_default_invoice_theme.scss */
+#invoice-other strong {
+  font-weight: normal;
+  float: left;
+  width: 16em;
+}
+
+/* line 34, ../sass/_default_invoice_theme.scss */
+#invoice-other #comments {
+  clear: both;
+  margin-top: 0em;
+  font-weight: normal;
+  color: #a10000;
+}
+
+/* line 35, ../sass/_default_invoice_theme.scss */
+#invoice-other #contract-number {
+  margin-bottom: 3em;
+}
+
+/* line 37, ../sass/_default_invoice_theme.scss */
+#comments {
+  clear: both;
+  padding-top: 0.3cm;
+}
+
+/*=========================== TABLES =========================*/
+/* line 41, ../sass/_default_invoice_theme.scss */
+#invoice table#invoice-amount {
+  border-collapse: collapse;
+  width: 100%;
+  clear: both;
+  margin: 1cm 0 0.4cm 0;
+}
+
+/* line 42, ../sass/_default_invoice_theme.scss */
+#invoice-amount th {
+  text-align: left;
+  white-space: nowrap;
+  padding: 3px 5px 3px 5px;
+  font-weight: normal;
+  background: #F2F2F2;
+}
+
+/* line 43, ../sass/_default_invoice_theme.scss */
+#invoice-amount td {
+  margin: 0;
+  padding: 4px 5px 4px 5px;
+  vertical-align: top;
+}
+
+/* line 44, ../sass/_default_invoice_theme.scss */
+#invoice-amount tr.item td {
+  background: #fff;
+}
+
+/* line 45, ../sass/_default_invoice_theme.scss */
+#invoice-amount td.item_r {
+  text-align: right;
+}
+
+/* line 46, ../sass/_default_invoice_theme.scss */
+#invoice-amount td.item_l {
+  text-align: left;
+  white-space: normal;
+}
+
+/* line 47, ../sass/_default_invoice_theme.scss */
+#invoice-amount td.total {
+  text-align: right;
+  font-weight: bold;
+  /*color: #a10000;*/
+}
+
+/* line 48, ../sass/_default_invoice_theme.scss */
+#invoice-amount td.action {
+  background: #FFF;
+  width: 7%;
+  padding-right: 0;
+  white-space: nowrap;
+  text-align: center;
+}
+
+/* line 49, ../sass/_default_invoice_theme.scss */
+#invoice-amount tr#total_tr {
+  background: #F2F2F2;
+}
+
+/* line 50, ../sass/_default_invoice_theme.scss */
+#invoice-amount td {
+  border-top: 1px solid #F2F2F2;
+}
+
+/* line 51, ../sass/_default_invoice_theme.scss */
+#invoice-amount tr#discount_tr, #invoice-amount tr#net_total_tr, #invoice-amount tr#vat_tr {
+  color: #777;
+}
+
+/* line 53, ../sass/_default_invoice_theme.scss */
+#invoice-amount .details_th {
+  width: 46%;
+}
+
+/* line 54, ../sass/_default_invoice_theme.scss */
+#invoice-amount .details_notax_th {
+  width: 54%;
+}
+
+/* line 55, ../sass/_default_invoice_theme.scss */
+#invoice-amount .quantity_th {
+  width: 13%;
+}
+
+/* line 56, ../sass/_default_invoice_theme.scss */
+#invoice-amount .subtotal_th {
+  width: 18%;
+  text-align: right;
+}
+
+/* line 57, ../sass/_default_invoice_theme.scss */
+#invoice-amount .unitprice_th {
+  width: 15%;
+  text-align: right;
+}
+
+/* line 58, ../sass/_default_invoice_theme.scss */
+#invoice-amount .salestax_th {
+  width: 8%;
+  text-align: center;
+}
+
+/* Invoice UK VAT Summary Table */
+/* line 61, ../sass/_default_invoice_theme.scss */
+#invoice #invoice-uk-vat-summary {
+  width: 100%;
+  border-collapse: collapse;
+  margin: 25px 0 0 0;
+  clear: both;
+  border: 0;
+  background: #fff;
+}
+
+/* line 62, ../sass/_default_invoice_theme.scss */
+#invoice tr#invoice-uk-vat-header th {
+  padding: 7px 0;
+  border-top: 1px solid #ccc;
+}
+
+/* line 63, ../sass/_default_invoice_theme.scss */
+#invoice-uk-vat-summary td, #invoice #invoice-uk-vat-summary th {
+  text-align: left;
+  font-size: 9pt;
+  padding: 2px 0;
+}
+
+/* line 64, ../sass/_default_invoice_theme.scss */
+#vat-total td, #vat-total th {
+  border-top: 1px solid #ccc;
+}
+
+/* line 20, ../sass/screen.scss */
 .container {
   *zoom: 1;
   max-width: 960px;
