--- a/nano/templates/invoice/index.html
+++ b/nano/templates/invoice/index.html
@@ -11,16 +11,18 @@
   
   <div class="data-list-wrapper invoice-data-list"> 
     <div class="data-list-header">
-      <div class="col name">Client</div>
       <div class="col due">Due date</div>
+      <div class="col ref">Reference No.</div>
+      <div class="col name">Client</div>
       <div class="col total">Total</div>
       <div class="col status">Status</div>
     </div>
     <div class="data-list">
       {% for invoice in invoices %}
-        <div class="row">
-          <div class="col name">{{ invoice.contact.first_name }} {{ invoice.contact.last_name }}</div>
+        <div class="row" data-id="{{ invoice.id }}">
           <div class="col due">{{ invoice.due_date.strftime('%d %B %Y') }}</div>
+          <div class="col ref">{{ invoice.reference }}</div>
+          <div class="col name">{{ invoice.contact.first_name }} {{ invoice.contact.last_name }}</div>
           <div class="col total">{{ invoice.total }}</div>
           <div class="col status">{{ invoice.status }}</div>
         </div>
@@ -29,5 +31,16 @@
   </div>
 
   {% endif %}
+  
+
+  <script type="text/javascript">
+    $(document).ready(function() {
+      $('div.row').on('click', function(evt) {
+        console.log('hello');
+        var el = $(this);
+        window.location = '/invoice/' + el.data('id');
+      });
+    });
+  </script>
 
 {% endblock %}
