--- a/nano/static/css/nano/sass/screen.scss
+++ b/nano/static/css/nano/sass/screen.scss
@@ -15,6 +15,8 @@
 @import "flash";
 @import "invoice";
 
+@import "default_invoice_theme";
+
 .container {
   @include container;
   @include susy-grid-background;
