--- a/nano/static/css/nano/sass/_default_invoice_theme.scss
+++ b/nano/static/css/nano/sass/_default_invoice_theme.scss
@@ -16,7 +16,7 @@
 
 /*=========================== LAYOUT =========================*/
 
-#invoice { padding:0 1cm 1cm 1cm; background: #ececec top left repeat-y; border: 1px solid #ccc; }
+#invoice { padding:0 1cm 1cm 1cm; background: #fff top left repeat-y; border: 1px solid #ccc; }
 #invoice-header .logo {float:left;}
 #invoice-header{margin-top:1.5cm; border-bottom:1px solid #a10000;padding-bottom:10px; overflow:hidden}
 * html #invoice-header {height:1%}
