--- a/nano/static/css/nano/stylesheets/screen.css
+++ b/nano/static/css/nano/stylesheets/screen.css
@@ -65,7 +65,12 @@ article, aside, details, figcaption, figure, footer, header, hgroup, menu, nav, 
 
 /* -------------------------------------------------------------------------*/
 /* Layout */
-/* line 37, ../sass/_shared.scss */
+/* line 2, ../sass/_shared.scss */
+a img {
+  vertical-align: middle;
+}
+
+/* line 6, ../sass/_shared.scss */
 h1 {
   color: #ee3322;
   font-size: 2em;
@@ -74,7 +79,7 @@ h1 {
   font-weight: 900;
 }
 
-/* line 46, ../sass/_shared.scss */
+/* line 14, ../sass/_shared.scss */
 .sidebar h3 {
   text-shadow: 0 1px white;
   font-size: 0.857em;
@@ -84,12 +89,12 @@ h1 {
   text-transform: uppercase;
   margin: 20px 0 2px 12px;
 }
-/* line 54, ../sass/_shared.scss */
+/* line 22, ../sass/_shared.scss */
 .sidebar ul.menu li {
   display: block;
   margin: 0px 0 2px 12px;
 }
-/* line 57, ../sass/_shared.scss */
+/* line 25, ../sass/_shared.scss */
 .sidebar ul.menu li a {
   display: block;
   text-decoration: none;
@@ -97,7 +102,7 @@ h1 {
   padding: 5px 12px;
 }
 
-/* line 66, ../sass/_shared.scss */
+/* line 34, ../sass/_shared.scss */
 .filters {
   *zoom: 1;
   background-image: -webkit-gradient(linear, 50% 0%, 50% 100%, color-stop(5%, #efefef), color-stop(100%, #d9d9d9));
@@ -116,7 +121,7 @@ h1 {
   display: table;
   clear: both;
 }
-/* line 74, ../sass/_shared.scss */
+/* line 42, ../sass/_shared.scss */
 .filters a {
   text-decoration: none;
   color: #555555;
@@ -128,42 +133,42 @@ h1 {
   -o-border-radius: 20px;
   border-radius: 20px;
 }
-/* line 81, ../sass/_shared.scss */
+/* line 49, ../sass/_shared.scss */
 .filters a img {
   vertical-align: middle;
   margin-bottom: 3px;
 }
-/* line 87, ../sass/_shared.scss */
+/* line 55, ../sass/_shared.scss */
 .filters a:hover {
   background-color: #ccc;
 }
-/* line 91, ../sass/_shared.scss */
+/* line 59, ../sass/_shared.scss */
 .filters .left {
   float: left;
 }
-/* line 95, ../sass/_shared.scss */
+/* line 63, ../sass/_shared.scss */
 .filters .right {
   float: right;
 }
 
-/* line 100, ../sass/_shared.scss */
+/* line 68, ../sass/_shared.scss */
 .first-create {
   margin: 50px auto;
   display: block;
   text-align: center;
 }
 
-/* line 109, ../sass/_shared.scss */
+/* line 77, ../sass/_shared.scss */
 .data-list-wrapper {
   margin: 10px;
 }
-/* line 112, ../sass/_shared.scss */
+/* line 80, ../sass/_shared.scss */
 .data-list-wrapper .col {
   display: table-cell;
   text-align: left;
 }
 
-/* line 118, ../sass/_shared.scss */
+/* line 86, ../sass/_shared.scss */
 .data-list-header {
   -moz-border-bottom-colors: none;
   -moz-border-left-colors: none;
@@ -184,14 +189,14 @@ h1 {
   font-size: 12px;
 }
 
-/* line 123, ../sass/_shared.scss */
+/* line 91, ../sass/_shared.scss */
 .data-list {
   -webkit-box-sizing: border-box;
   -moz-box-sizing: border-box;
   box-sizing: border-box;
   border: 1px solid #aaaaaa;
 }
-/* line 128, ../sass/_shared.scss */
+/* line 96, ../sass/_shared.scss */
 .data-list .row {
   background-color: #fff;
   border-bottom: 1px solid #ececec;
@@ -199,11 +204,11 @@ h1 {
   font-size: 12px;
   cursor: pointer;
 }
-/* line 136, ../sass/_shared.scss */
+/* line 104, ../sass/_shared.scss */
 .data-list .row:hover {
   background-color: #ececec;
 }
-/* line 140, ../sass/_shared.scss */
+/* line 108, ../sass/_shared.scss */
 .data-list .row:last-child {
   border-bottom: none;
 }
@@ -427,8 +432,9 @@ body, html {
   font-weight: 600;
   padding: 8px 16px;
   vertical-align: top;
+  text-decoration: none;
 }
-/* line 46, ../sass/_buttons.scss */
+/* line 47, ../sass/_buttons.scss */
 .button.normal:active {
   outline: none;
   background-color: #E2E5EC;
@@ -438,6 +444,38 @@ body, html {
   box-shadow: 0 1px 3px rgba(96, 101, 124, 0.1) inset, 0 1px 0 white;
   color: #5C627F;
   text-shadow: 0 1px 1px rgba(255, 255, 255, 0.5);
+}
+
+/* line 59, ../sass/_buttons.scss */
+a.btn-small {
+  font-size: 0.714em;
+  line-height: 2.4em;
+  -webkit-border-radius: 3px;
+  -moz-border-radius: 3px;
+  -ms-border-radius: 3px;
+  -o-border-radius: 3px;
+  border-radius: 3px;
+  background-image: -webkit-gradient(linear, 50% 0%, 50% 100%, color-stop(0%, #eeeeee), color-stop(100%, #ffffff));
+  background-image: -webkit-linear-gradient(#eeeeee, #ffffff);
+  background-image: -moz-linear-gradient(#eeeeee, #ffffff);
+  background-image: -o-linear-gradient(#eeeeee, #ffffff);
+  background-image: -ms-linear-gradient(#eeeeee, #ffffff);
+  background-image: linear-gradient(#eeeeee, #ffffff);
+  padding: 2px 5px;
+  position: relative;
+  line-height: 1em;
+  border-color: #D8D8D8 #C6C6C6 #C6C6C6;
+  border-style: solid;
+  border-width: 1px;
+  display: inline-block;
+  font-weight: bold;
+  text-align: center;
+  text-decoration: none !important;
+  color: #666;
+}
+/* line 78, ../sass/_buttons.scss */
+a.btn-small:hover {
+  cursor: pointer;
 }
 
 /* line 33, ../sass/_forms.scss */
@@ -570,9 +608,59 @@ ul.flashes {
   background-color: #fff;
 }
 
-/* line 3, ../sass/_invoice.scss */
+/* line 4, ../sass/_invoice.scss */
 .invoice-data-list .col {
   width: 160px;
+}
+
+/* line 11, ../sass/_invoice.scss */
+.pagestyle {
+  border-top: 1px solid #CCC;
+  border-left: solid 1px #CCC;
+  border-bottom: solid 2px #888;
+  border-right: solid 2px #888;
+  display: inline-block;
+  margin: 0 auto;
+  padding: 10px 20px;
+  position: relative;
+  width: 660px;
+}
+
+/* line 23, ../sass/_invoice.scss */
+.draft .pagestyle {
+  padding-right: 1.75cm !important;
+}
+
+/* line 27, ../sass/_invoice.scss */
+.pagestyle:after {
+  content: ".";
+  display: block;
+  clear: both;
+  visibility: hidden;
+  line-height: 0;
+  height: 0;
+}
+
+/* line 36, ../sass/_invoice.scss */
+html[xmlns] .pagestyle {
+  display: block;
+}
+
+/* line 40, ../sass/_invoice.scss */
+.pagestyle img {
+  border: none;
+}
+
+/* line 44, ../sass/_invoice.scss */
+#invoice {
+  display: block;
+  margin: 2em auto;
+}
+/* line 48, ../sass/_invoice.scss */
+#invoice .item-controls {
+  position: absolute;
+  right: 10px;
+  width: 58px;
 }
 
 /* line 1, ../sass/_default_invoice_theme.scss */
@@ -669,7 +757,7 @@ ul.flashes {
 /* line 19, ../sass/_default_invoice_theme.scss */
 #invoice {
   padding: 0 1cm 1cm 1cm;
-  background: #ececec top left repeat-y;
+  background: #fff top left repeat-y;
   border: 1px solid #ccc;
 }
 
@@ -918,7 +1006,7 @@ ul.flashes {
   border-top: 1px solid #ccc;
 }
 
-/* line 20, ../sass/screen.scss */
+/* line 21, ../sass/screen.scss */
 .container {
   *zoom: 1;
   max-width: 960px;
