Reorganized the js folder

--- a/nano/templates/layout.html
+++ b/nano/templates/layout.html
@@ -5,11 +5,11 @@
     <meta charset="utf-8" />
     <title>{{ page_title }}</title>
     <link rel="stylesheet" type="text/css" href="/static/css/nano/stylesheets/screen.css" />
-    <link rel="stylesheet" type="text/css" href="/static/js/select2/select2.css" />
-    <link rel="stylesheet" type="text/css" href="/static/js/Pikaday/css/pikaday.css" />
-    <script src="/static/js/jquery-1.8.3.min.js"></script>
-    <script src="/static/js/select2/select2.js"></script>
-    <script src="/static/js/Pikaday/pikaday.min.js"></script>
+    <link rel="stylesheet" type="text/css" href="/static/js/vendor/select2/select2.css" />
+    <link rel="stylesheet" type="text/css" href="/static/js/vendor/Pikaday/css/pikaday.css" />
+    <script src="/static/js/lib/jquery-1.8.3.min.js"></script>
+    <script src="/static/js/vendor/select2/select2.js"></script>
+    <script src="/static/js/vendor/Pikaday/pikaday.min.js"></script>
     {% endblock %}
   </head>
   <body>
