Added js assets
 - using Flask-Assets

--- a/nano/templates/invoice/show.html
+++ b/nano/templates/invoice/show.html
@@ -62,7 +62,7 @@
 <script type="text/javascript">
   var view = new DraftInvoiceView({
     el: "#manage",
-    model: new Invoice(<?php echo json_encode($invoice->toArrayForJson()); ?>) 
+    model: new Invoice() 
   }); 
 </script>
 
