--- a/nano/static/js/app/templates/new_invoice_item.html
+++ b/nano/static/js/app/templates/new_invoice_item.html
@@ -37,9 +37,8 @@
           <input id="price" type="text" name="invoice_item[price]" />
         <li>
         
-        <% if (User.vatRegistration.get("status") == "registered"){ %>
         <li id="tax-row">
-          <label>VAT</label>
+          <label>Tax</label>
           <select name="invoice_item[tax_rate_id]">
             <% App.taxRates.each(function(t){ %>
               <% if (t.get("id") == App.defaults.taxRateId) { %> 
@@ -50,7 +49,6 @@
             <% }) %> 
           </select>
         </li>
-        <% } %>
 
         <li class="actions">
           <button id="save" class="btn primary">Create</button> &nbsp; 
