--- a/nano/static/css/nano/stylesheets/screen.css
+++ b/nano/static/css/nano/stylesheets/screen.css
@@ -663,7 +663,7 @@ html[xmlns] .pagestyle {
   width: 58px;
 }
 
-/* line 1, ../sass/_default_invoice_theme.scss */
+/* line 1, ../sass/invoice_themes/_default.scss */
 #invoice h1 {
   margin: 0;
   color: #555;
@@ -671,102 +671,102 @@ html[xmlns] .pagestyle {
   text-transform: uppercase;
 }
 
-/* line 2, ../sass/_default_invoice_theme.scss */
+/* line 2, ../sass/invoice_themes/_default.scss */
 #invoice h2, #Main #invoice h3 {
   color: #000;
   text-transform: none;
 }
 
-/* line 3, ../sass/_default_invoice_theme.scss */
+/* line 3, ../sass/invoice_themes/_default.scss */
 #invoice h2 {
   margin: 10px 0;
   font-size: 14pt;
 }
 
-/* line 4, ../sass/_default_invoice_theme.scss */
+/* line 4, ../sass/invoice_themes/_default.scss */
 #invoice-amount td, th {
   font-size: 10pt;
 }
 
-/* line 5, ../sass/_default_invoice_theme.scss */
+/* line 5, ../sass/invoice_themes/_default.scss */
 #invoice-header #company-address {
   text-align: right;
   font-size: 11pt;
   line-height: 14pt;
 }
 
-/* line 6, ../sass/_default_invoice_theme.scss */
+/* line 6, ../sass/invoice_themes/_default.scss */
 #invoice #client-details, #invoice-info p {
   font-size: 10pt;
   line-height: 14pt;
 }
 
-/* line 7, ../sass/_default_invoice_theme.scss */
+/* line 7, ../sass/invoice_themes/_default.scss */
 #invoice #invoice-other, #invoice #payment-details {
   font-size: 10pt;
   line-height: 14pt;
 }
 
-/* line 8, ../sass/_default_invoice_theme.scss */
+/* line 8, ../sass/invoice_themes/_default.scss */
 #invoice-info h2, #invoice-info h3 {
   margin: 0;
   font-weight: normal;
 }
 
-/* line 9, ../sass/_default_invoice_theme.scss */
+/* line 9, ../sass/invoice_themes/_default.scss */
 #invoice #invoice-info h2 {
   text-transform: uppercase;
   font-size: 18pt;
 }
 
-/* line 10, ../sass/_default_invoice_theme.scss */
+/* line 10, ../sass/invoice_themes/_default.scss */
 #invoice #invoice-info h3 {
   font-size: 12pt;
 }
 
-/* line 11, ../sass/_default_invoice_theme.scss */
+/* line 11, ../sass/invoice_themes/_default.scss */
 #invoice #invoice-info p {
   text-align: right;
   margin-top: 0;
 }
 
-/* line 12, ../sass/_default_invoice_theme.scss */
+/* line 12, ../sass/invoice_themes/_default.scss */
 #invoice-info #payment-total {
   display: none;
 }
 
-/* line 13, ../sass/_default_invoice_theme.scss */
+/* line 13, ../sass/invoice_themes/_default.scss */
 #comments {
   font-weight: bold;
   margin-top: 0;
   font-size: 10pt;
 }
 
-/* line 14, ../sass/_default_invoice_theme.scss */
+/* line 14, ../sass/invoice_themes/_default.scss */
 #invoice #invoice-info h2, #invoice #company-address div.email, #invoice #invoice-other h2, #invoice #payment-details h2 {
   color: #a10000;
 }
 
-/* line 15, ../sass/_default_invoice_theme.scss */
+/* line 15, ../sass/invoice_themes/_default.scss */
 #invoice #invoice-other h2, #invoice #payment-details h2 {
   font-weight: normal;
   text-transform: uppercase;
 }
 
 /*=========================== LAYOUT =========================*/
-/* line 19, ../sass/_default_invoice_theme.scss */
+/* line 19, ../sass/invoice_themes/_default.scss */
 #invoice {
   padding: 0 1cm 1cm 1cm;
   background: #fff top left repeat-y;
   border: 1px solid #ccc;
 }
 
-/* line 20, ../sass/_default_invoice_theme.scss */
+/* line 20, ../sass/invoice_themes/_default.scss */
 #invoice-header .logo {
   float: left;
 }
 
-/* line 21, ../sass/_default_invoice_theme.scss */
+/* line 21, ../sass/invoice_themes/_default.scss */
 #invoice-header {
   margin-top: 1.5cm;
   border-bottom: 1px solid #a10000;
@@ -774,17 +774,17 @@ html[xmlns] .pagestyle {
   overflow: hidden;
 }
 
-/* line 22, ../sass/_default_invoice_theme.scss */
+/* line 22, ../sass/invoice_themes/_default.scss */
 * html #invoice-header {
   height: 1%;
 }
 
-/* line 23, ../sass/_default_invoice_theme.scss */
+/* line 23, ../sass/invoice_themes/_default.scss */
 #invoice-blank-header {
   margin-top: 1.6cm;
 }
 
-/* line 24, ../sass/_default_invoice_theme.scss */
+/* line 24, ../sass/invoice_themes/_default.scss */
 #invoice-info {
   margin: 0.7cm 0 20px 0;
   width: 55%;
@@ -792,17 +792,17 @@ html[xmlns] .pagestyle {
   text-align: right;
 }
 
-/* line 25, ../sass/_default_invoice_theme.scss */
+/* line 25, ../sass/invoice_themes/_default.scss */
 #invoice-info #payment-terms {
   display: none;
 }
 
-/* line 26, ../sass/_default_invoice_theme.scss */
+/* line 26, ../sass/invoice_themes/_default.scss */
 #invoice-info #payment-due {
   font-style: italic;
 }
 
-/* line 27, ../sass/_default_invoice_theme.scss */
+/* line 27, ../sass/invoice_themes/_default.scss */
 #company-address {
   margin: 0;
   padding: 0;
@@ -810,7 +810,7 @@ html[xmlns] .pagestyle {
   float: right;
 }
 
-/* line 28, ../sass/_default_invoice_theme.scss */
+/* line 28, ../sass/invoice_themes/_default.scss */
 #client-details {
   margin: 0.7cm 0 20px 0cm;
   float: left;
@@ -818,7 +818,7 @@ html[xmlns] .pagestyle {
 }
 
 /* Positioned to appear in a standard envelope window when printed */
-/* line 29, ../sass/_default_invoice_theme.scss */
+/* line 29, ../sass/invoice_themes/_default.scss */
 #invoice-other {
   text-align: right;
   clear: both;
@@ -827,33 +827,33 @@ html[xmlns] .pagestyle {
   margin-top: 0;
 }
 
-/* line 30, ../sass/_default_invoice_theme.scss */
+/* line 30, ../sass/invoice_themes/_default.scss */
 #invoice #payment-details {
   float: left;
   width: 45%;
   margin-top: 0;
 }
 
-/* line 31, ../sass/_default_invoice_theme.scss */
+/* line 31, ../sass/invoice_themes/_default.scss */
 #payment-details .sort-code, #payment-details .account-number, #payment-details .payment-reference {
   clear: left;
 }
 
-/* line 32, ../sass/_default_invoice_theme.scss */
+/* line 32, ../sass/invoice_themes/_default.scss */
 #payment-details strong {
   font-weight: normal;
   float: left;
   width: 12em;
 }
 
-/* line 33, ../sass/_default_invoice_theme.scss */
+/* line 33, ../sass/invoice_themes/_default.scss */
 #invoice-other strong {
   font-weight: normal;
   float: left;
   width: 16em;
 }
 
-/* line 34, ../sass/_default_invoice_theme.scss */
+/* line 34, ../sass/invoice_themes/_default.scss */
 #invoice-other #comments {
   clear: both;
   margin-top: 0em;
@@ -861,19 +861,19 @@ html[xmlns] .pagestyle {
   color: #a10000;
 }
 
-/* line 35, ../sass/_default_invoice_theme.scss */
+/* line 35, ../sass/invoice_themes/_default.scss */
 #invoice-other #contract-number {
   margin-bottom: 3em;
 }
 
-/* line 37, ../sass/_default_invoice_theme.scss */
+/* line 37, ../sass/invoice_themes/_default.scss */
 #comments {
   clear: both;
   padding-top: 0.3cm;
 }
 
 /*=========================== TABLES =========================*/
-/* line 41, ../sass/_default_invoice_theme.scss */
+/* line 41, ../sass/invoice_themes/_default.scss */
 #invoice table#invoice-amount {
   border-collapse: collapse;
   width: 100%;
@@ -881,7 +881,7 @@ html[xmlns] .pagestyle {
   margin: 1cm 0 0.4cm 0;
 }
 
-/* line 42, ../sass/_default_invoice_theme.scss */
+/* line 42, ../sass/invoice_themes/_default.scss */
 #invoice-amount th {
   text-align: left;
   white-space: nowrap;
@@ -890,37 +890,37 @@ html[xmlns] .pagestyle {
   background: #F2F2F2;
 }
 
-/* line 43, ../sass/_default_invoice_theme.scss */
+/* line 43, ../sass/invoice_themes/_default.scss */
 #invoice-amount td {
   margin: 0;
   padding: 4px 5px 4px 5px;
   vertical-align: top;
 }
 
-/* line 44, ../sass/_default_invoice_theme.scss */
+/* line 44, ../sass/invoice_themes/_default.scss */
 #invoice-amount tr.item td {
   background: #fff;
 }
 
-/* line 45, ../sass/_default_invoice_theme.scss */
+/* line 45, ../sass/invoice_themes/_default.scss */
 #invoice-amount td.item_r {
   text-align: right;
 }
 
-/* line 46, ../sass/_default_invoice_theme.scss */
+/* line 46, ../sass/invoice_themes/_default.scss */
 #invoice-amount td.item_l {
   text-align: left;
   white-space: normal;
 }
 
-/* line 47, ../sass/_default_invoice_theme.scss */
+/* line 47, ../sass/invoice_themes/_default.scss */
 #invoice-amount td.total {
   text-align: right;
   font-weight: bold;
   /*color: #a10000;*/
 }
 
-/* line 48, ../sass/_default_invoice_theme.scss */
+/* line 48, ../sass/invoice_themes/_default.scss */
 #invoice-amount td.action {
   background: #FFF;
   width: 7%;
@@ -929,56 +929,56 @@ html[xmlns] .pagestyle {
   text-align: center;
 }
 
-/* line 49, ../sass/_default_invoice_theme.scss */
+/* line 49, ../sass/invoice_themes/_default.scss */
 #invoice-amount tr#total_tr {
   background: #F2F2F2;
 }
 
-/* line 50, ../sass/_default_invoice_theme.scss */
+/* line 50, ../sass/invoice_themes/_default.scss */
 #invoice-amount td {
   border-top: 1px solid #F2F2F2;
 }
 
-/* line 51, ../sass/_default_invoice_theme.scss */
+/* line 51, ../sass/invoice_themes/_default.scss */
 #invoice-amount tr#discount_tr, #invoice-amount tr#net_total_tr, #invoice-amount tr#vat_tr {
   color: #777;
 }
 
-/* line 53, ../sass/_default_invoice_theme.scss */
+/* line 53, ../sass/invoice_themes/_default.scss */
 #invoice-amount .details_th {
   width: 46%;
 }
 
-/* line 54, ../sass/_default_invoice_theme.scss */
+/* line 54, ../sass/invoice_themes/_default.scss */
 #invoice-amount .details_notax_th {
   width: 54%;
 }
 
-/* line 55, ../sass/_default_invoice_theme.scss */
+/* line 55, ../sass/invoice_themes/_default.scss */
 #invoice-amount .quantity_th {
   width: 13%;
 }
 
-/* line 56, ../sass/_default_invoice_theme.scss */
+/* line 56, ../sass/invoice_themes/_default.scss */
 #invoice-amount .subtotal_th {
   width: 18%;
   text-align: right;
 }
 
-/* line 57, ../sass/_default_invoice_theme.scss */
+/* line 57, ../sass/invoice_themes/_default.scss */
 #invoice-amount .unitprice_th {
   width: 15%;
   text-align: right;
 }
 
-/* line 58, ../sass/_default_invoice_theme.scss */
+/* line 58, ../sass/invoice_themes/_default.scss */
 #invoice-amount .salestax_th {
   width: 8%;
   text-align: center;
 }
 
 /* Invoice UK VAT Summary Table */
-/* line 61, ../sass/_default_invoice_theme.scss */
+/* line 61, ../sass/invoice_themes/_default.scss */
 #invoice #invoice-uk-vat-summary {
   width: 100%;
   border-collapse: collapse;
@@ -988,25 +988,122 @@ html[xmlns] .pagestyle {
   background: #fff;
 }
 
-/* line 62, ../sass/_default_invoice_theme.scss */
+/* line 62, ../sass/invoice_themes/_default.scss */
 #invoice tr#invoice-uk-vat-header th {
   padding: 7px 0;
   border-top: 1px solid #ccc;
 }
 
-/* line 63, ../sass/_default_invoice_theme.scss */
+/* line 63, ../sass/invoice_themes/_default.scss */
 #invoice-uk-vat-summary td, #invoice #invoice-uk-vat-summary th {
   text-align: left;
   font-size: 9pt;
   padding: 2px 0;
 }
 
-/* line 64, ../sass/_default_invoice_theme.scss */
+/* line 64, ../sass/invoice_themes/_default.scss */
 #vat-total td, #vat-total th {
   border-top: 1px solid #ccc;
 }
 
-/* line 21, ../sass/screen.scss */
+/* line 1, ../sass/vendor/_facebox.scss */
+#facebox {
+  position: absolute;
+  top: 0;
+  left: 0;
+  z-index: 100;
+  text-align: left;
+}
+
+/* line 10, ../sass/vendor/_facebox.scss */
+#facebox .popup {
+  position: relative;
+  border: 3px solid rgba(0, 0, 0, 0);
+  -webkit-border-radius: 5px;
+  -moz-border-radius: 5px;
+  border-radius: 5px;
+  -webkit-box-shadow: 0 0 18px rgba(0, 0, 0, 0.4);
+  -moz-box-shadow: 0 0 18px rgba(0, 0, 0, 0.4);
+  box-shadow: 0 0 18px rgba(0, 0, 0, 0.4);
+}
+
+/* line 21, ../sass/vendor/_facebox.scss */
+#facebox .content {
+  display: table;
+  width: 370px;
+  padding: 10px;
+  background: #fff;
+  -webkit-border-radius: 4px;
+  -moz-border-radius: 4px;
+  border-radius: 4px;
+}
+
+/* line 31, ../sass/vendor/_facebox.scss */
+#facebox .content > p:first-child {
+  margin-top: 0;
+}
+
+/* line 34, ../sass/vendor/_facebox.scss */
+#facebox .content > p:last-child {
+  margin-bottom: 0;
+}
+
+/* line 38, ../sass/vendor/_facebox.scss */
+#facebox .close {
+  position: absolute;
+  top: 5px;
+  right: 5px;
+  padding: 2px;
+  background: #fff;
+}
+
+/* line 45, ../sass/vendor/_facebox.scss */
+#facebox .close img {
+  opacity: 0.3;
+}
+
+/* line 48, ../sass/vendor/_facebox.scss */
+#facebox .close:hover img {
+  opacity: 1.0;
+}
+
+/* line 52, ../sass/vendor/_facebox.scss */
+#facebox .loading {
+  text-align: center;
+}
+
+/* line 56, ../sass/vendor/_facebox.scss */
+#facebox .image {
+  text-align: center;
+}
+
+/* line 60, ../sass/vendor/_facebox.scss */
+#facebox img {
+  border: 0;
+  margin: 0;
+}
+
+/* line 65, ../sass/vendor/_facebox.scss */
+#facebox_overlay {
+  position: fixed;
+  top: 0px;
+  left: 0px;
+  height: 100%;
+  width: 100%;
+}
+
+/* line 73, ../sass/vendor/_facebox.scss */
+.facebox_hide {
+  z-index: -100;
+}
+
+/* line 77, ../sass/vendor/_facebox.scss */
+.facebox_overlayBG {
+  background-color: #000;
+  z-index: 99;
+}
+
+/* line 22, ../sass/screen.scss */
 .container {
   *zoom: 1;
   max-width: 960px;
