--- a/nano/templates/layout.html
+++ b/nano/templates/layout.html
@@ -13,6 +13,7 @@
     {% assets 'js_app' %}
       <script type="text/javascript" src="{{ ASSET_URL }}"></script>
     {% endassets %}
+    <script type="text/javascript" src="{{ url_for('app_js.constants') }}"></script>
     {% assets 'js_vendors' %}
       <script type="text/javascript" src="{{ ASSET_URL }}"></script>
     {% endassets %}
