--- a/nano/static/css/nano/sass/screen.scss
+++ b/nano/static/css/nano/sass/screen.scss
@@ -15,6 +15,7 @@
 @import "forms";
 @import "flash";
 @import "invoice";
+@import "popup";
 
 @import "invoice_themes/default";
 @import "vendor/vendor";
