--- a/nano/templates/invoice/show.html
+++ b/nano/templates/invoice/show.html
@@ -1,17 +1,20 @@
 {% extends 'layout.html' %}
 {% block content %}
+<div class="filters">
+  <div class="left">
+    {% if invoice.status == 'sent' %}
+      <a href="">Reopen invoice</a>
+      {% endif %}
+    {% if invoice.status == 'draft' %}
+      <a href="">Mark as sent</a>
+      <a href="">Edit invoice</a>
+    {% endif %}
+  </div>
+  <div class="right">
+  </div>
+</div>
 
 <div id="manage" class="workspace-inner"> 
- 
-    <div class="controls-{{ invoice.status }}" id="invoice-actions">
-      {% if invoice.status == 'sent' %}
-        <a href="">Reopen invoice</a>
-        {% endif %}
-      {% if invoice.status == 'draft' %}
-        <a href="">Mark as sent</a>
-        <a href="">Edit invoice</a>
-      {% endif %}
-    </div>
 
     <div class="{{ invoice.status }}">
       <div id="invoice" class="pagestyle">
